fixed the breadcrumb and hover text div alignment

--- a/_css/style.css
+++ b/_css/style.css
@@ -221,6 +221,7 @@ height:300px;*/
 background-color: #ffffff;
 float:left;
 margin-left: 220px;
+margin-top: 2px;
 bottom: 10px;
 height:70px;
 padding-left:12px;
